--- a/styl.css
+++ b/styl.css
@@ -23,43 +23,75 @@ div.my-black{
 
    }
 
+   .image{display: block; 
+      height: 500px;
+      width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      clear: both;
+   }
+
+  
+
+
    /* This style will apply to all four elements */
-   h4 {
-   		background-image: url ("bridge.jpg") no-repeat center center fixed;
+   body {
+   		background: url(marble.png) no-repeat center center fixed;
+         background-size: cover;
+   }
+
+   
+   	h1 {
+   		font: 400 100px/1.3 'Arizonia', helvetica, sans-serif;
+   		color: black;
+   		text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
+   	}
+   	
+
+h1 {
+      text-align: center;
+   }
+
+   h2 {
+      text-align: center;
    }
 
    h3 {
-   		font-family: "Times New Roman", serif, xyz;
-   		color: white;
-   		font-size: 20px;
+      text-align: center;
+   }
 
-   		}
-   	h1 {
-   		font-family: "lucida Calligraphy", serif, xyz;
-   		color: white;
-   		font-size: 50px;
-   	}
-   	h2 { 
-   		font-family: "lucida Calligraphy", serif, xyz;
-   		color: white;
-   		font-size: 20px;
-   	}
+   
+
+   
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 0 8px 16px;
+    text-decoration: none;
+}
 
    	ul{
-   		clear: both;
+   		float: left;
+         display: block;
+         background-color: grey;
+         list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 6%;
+    width: 80%;
+    
    	}
 
    	ul li {
    		display: inline;
    		float:left;
-   		color:white;
+   		color:black;
    	}
 
    	ul li a{
-   		color: white;
+   		color: black;
    	}
-
-
 
 
 
